[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Themes/temp_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/UI_Scenes/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UI_Scenes/PauseMenu.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Entry"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Entry"
anims/Entry = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 128.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 66, 50 )
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_right = 89.0
margin_bottom = 92.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 59.0
margin_bottom = 14.0
text = "P{AUSED"
align = 1

[node name="Continue" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 18.0
margin_right = 59.0
margin_bottom = 40.0
rect_min_size = Vector2( 22, 22 )
rect_scale = Vector2( 1, 1 )
text = "Continue"

[node name="Options" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 44.0
margin_right = 59.0
margin_bottom = 66.0
rect_min_size = Vector2( 22, 22 )
rect_scale = Vector2( 1, 1 )
text = "Options"

[node name="Quit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 70.0
margin_right = 59.0
margin_bottom = 92.0
rect_min_size = Vector2( 22, 22 )
rect_scale = Vector2( 1, 1 )
text = "Menu"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
